yaml-samples/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryatk4536.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi-svc
  namespace: api-dev
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: poi
