yaml-samples/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  label:
    app: trips
  name: trips
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: trips
        image: registryatk4536.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
spec:
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: trips
