yaml-samples/userjava.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava
  namespace: api-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      containers:
      - name: userjava
        image: registryatk4536.azurecr.io/tripinsights/userjava:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userjava-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: userjava
