yaml-samples/ingressctl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressctl
  namespace: web-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingressctl
  template:
    metadata:
      labels:
        app: ingressctl
    spec:
      containers:
      - name: ingressctl
        image: neilpeterson/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingressctl
  namespace: web-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ingressctl
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingressctl
  namespace: web-dev
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: ingressctl.c17d6ed3cc5545ffb648.northeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: tripviewer-svc
          servicePort: 80
        path: /
