yaml-samples/ingressnginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: web-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: 20.54.91.211.nip.io
      http:
        paths:
          - backend:
              serviceName: tripviewer-svc
              servicePort: 80
            path: /
